maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: Missing closing brace `}' assumed here
override def run() {while (!estSurBiscuit())
^WallFollowerMaze:2: error: expected start of definition
override def run() {while (!estSurBiscuit())
         ^WallFollowerMaze:6: error: expected class or object definition
def keepHandOnSideWall() {gauche ();
^